--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,10 +1,26 @@
 <h1>Listing tours</h1>
 
-<ul>
-  <% @tours.each do |tour| %>
-      <li><%= link_to tour.title, tour %></li>
-  <% end %>
-ra</ul>
-<br>
 
+<table>
+  <tr>
+    <th>Title</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+  <% @tours.each do |tour| %>
+      <tr>
+        <td><%= tour.title %></td>
+        <td><%= link_to 'Show', tour %></td>
+        <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
+        <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you
+sure?' } %></td>
+      </tr>
+  <% end %>
+</table>
+<br />
 <%= link_to 'New Tour', new_tour_path %>
+
+
+
+
